		errors).
		The mbfile list function now gives a listing of the contents
		of a file area if the area number is given as argument.
		Implemented "mbfile move" command. You can only move one file
		at the same time.
		Implemented "mbfile delete" and "mbfile undelete" commands.
		The command mbfile check now removes obsolete file databases.
		Fixes for Sparc systems.
		Fixed index screens to prevent negative totals with large
		filebases.
		Added standard doctype header and commentline to the html 
		pages.
		The mbfile check function deletes double filerecords in the
		database.

	mball:
		The index function is now obsolete, this is added to mbfile.
		You may need to adjust your scripts that call "mball index".
		Fixes for Sparc systems.
		Fixed to prevent negative values with large filebases.

	mbaff:
		Fixes for Sparc systems.
		Fix for large filebases, could not run longer then 10 minutes.

	mbindex:
		Fixes for Sparc systems.

	mbdiff:
		Fixes for Sparc systems.

	mbfbgen:
		Obsolete and removed from the distribution. The function is
		now in mbfile.

	fbutil:
		Removed from the distribution. Thanks to Johannes Lundberg,
		2:206/149@fidonet to let us use his program until mbfile could
		take over.



v0.33.20        10-Feb-2002

	upgrade:
		Compile sources and install binaries. Restart the BBS.
		Enter mbsetup, this will upgrade the databases.

	general:
		Added structures for area maintenance with area lists.


	common.a:
		Added 2 functions to return the OS name and CPU family.
		Added a function to return the right tearline.
		Added support for ext3 filesystem in diskspace check.

	mbsetup:
		In message groups added default settings for auto area
		creation.

	mbfido:
		In AreaMgr and FileMgr changed aka matching for area 
		connections. Code cleanups.

	mball:
		Will not crash anymore when it needs more then 10 minutes to
		create the allfiles and newfiles lists.

	mbtask:
		Removed some debug logging.
