@@ -4,6 +4,7 @@
 #define	_CREATEM_H
 
 
+int create_msgarea(char *, faddr *);
 
 #endif
 
