@@ -31,12 +31,12 @@
 #include "../lib/libs.h"
 #include "../lib/structs.h"
 #include "../lib/users.h"
+#include "../lib/common.h"
 #include "../lib/records.h"
 #include "../lib/dbcfg.h"
 #include "../lib/dbuser.h"
 #include "../lib/dbnode.h"
 #include "../lib/dbftn.h"
-#include "../lib/common.h"
 #include "../lib/clcomm.h"
 #include "tracker.h"
 #include "addpkt.h"
