@@ -4604,6 +4604,12 @@ v0.33.20        10-Feb-2002
 	mbfido:
 		In AreaMgr and FileMgr changed aka matching for area 
 		connections. Code cleanups.
+		In FileMgr when %tick=on/off command was received, mbfido
+		crashed.
+		Implemented auto area create comparing a new received echo
+		from a uplink which has a echomail taglist in one of the
+		mailgroups defined. The area is created with the defaults
+		from the mailgroup.
 
 	mball:
 		Will not crash anymore when it needs more then 10 minutes to
